# ARMy

./: .gitignore  .travis.yml  README.md  parser.cpp  parser.txt
PythonUi/: Initializer.py  Main.py  wersja1.py
parser/: CMakeLists.txt  README.md  parser.cpp  parser.hpp
parser/test/: CMakeLists.txt  parser2.txt  test-parser.cpp
resources/: parser1.txt
src/: CMakeLists.txt  FindLame.cmake  main.cpp
src/File/: File.cpp  File.h  File_read.cpp  File_save.cpp
src/Filters/: Filter.h  Filters.h
src/Filters/Delay/: Delay.cpp  Delay.h
src/Filters/Equalizer/: Equalizer.cpp  Equalizer.h
src/Parser/: parser.cpp  parser.hpp
src/dataTypes/: types.h
